SERVER-81238 Make local collMod not assert on movePrimary in progress